--- a/back.end/slim-docker-app/composer.json
+++ b/back.end/slim-docker-app/composer.json
@@ -1,11 +1,13 @@
 {
     "require": {
         "slim/slim": "^4.11",
-        "slim/psr7": "^1.6"
+        "slim/psr7": "^1.6",
+        "robmorgan/phinx": "^0.12.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "App\\CV\\": "src/cv/"
         }
     }
 }
